# opencl_exam_framework

./: CMakeLists.txt  compile.sh  todo.txt
cp_lib/: CMakeLists.txt  cp_clock.cpp  cp_clock.h  cp_image.cpp  cp_image.h  cp_lib.h  cp_log.c  cp_params.h
gaussian_blur/: CMakeLists.txt  main.cpp
greyscale/: CMakeLists.txt  main.cpp
hough_transform/: CMakeLists.txt  main.cpp
kernels/: gaussian_blur.cl  greyscale.cl  hough_transform.cl
kernels/cp_lib/: cp_lib_types.h
opencl_lib/: CMakeLists.txt  main.cpp  opencl_api.cpp  opencl_api.h  opencl_scope_guard.h  opencl_utility.cpp  opencl_utility.h  opencl_utility.tpp
